# tensorc

./: CMakeLists.txt  LICENSE
cli/: tensorc.cpp
cli/test_files/: fused_example.tcc  test_1.tcc  test_2.tcc  test_3.tcc  test_4.tcc  test_5.tcc  test_6.tcc
compiler/ast/: ASTNode.h  SemanticAnalyzer.h  SymbolTable.h  Type.cpp  Type.h  test_ast.cpp
compiler/io/: ImportRegistry.h  ImportResolver.h  builtins.h  cache.h  error.h  file.h  io.h
compiler/ir/: IRBuilder.h  IRModule.h  IRPasses.h  IRPrinter.h  Instruction.h  Value.h  ir.h
compiler/lexer/: Lexer.cpp  Lexer.h  Position.h  Token.h  TokenKind.h  test_lexer.cpp
compiler/parser/: Parser.cpp  Parser.h  test_parser.cpp
tests/: test_ast.cpp  test_bb.cpp  test_function.cpp  test_instructions.cpp  test_irbuilder.cpp  test_irmodule.cpp  test_irprinter.cpp  test_lexer.cpp  test_parser.cpp  test_value.cpp
